--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <!-- <link rel="stylesheet" href="css/tablet.css" />
-    <link rel="stylesheet" href="css/phone.css" /> -->
+    <link rel="stylesheet" href="css/tablet.css" />
+    <link rel="stylesheet" href="css/phone.css" />
     <script src="index.js" defer></script>
   </head>
   <body>
