--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/tablet-styles.css" />
     <script src="index.js" defer></script>
   </head>
   <body>
@@ -138,173 +139,177 @@
         </ul>
       </section>
       <section id="Studio" class="container">
-        <ul class="part-three">
+        <div class="part-three-wrapper">
           <h2 class="part-three-title">Our Team</h2>
-          <li class="part-three-list">
-            <img
-              class="part-three-list-img"
-              src="image/our-team/img-1.jpg"
-              alt="Mark Guerrero resmi"
-            />
-            <div class="part-three-list-text">
-              <p class="part-three-list-text-name">Mark Guerrero</p>
-              <p class="part-three-list-text-information">Product Designer</p>
-              <ul class="part-three-list-social-media">
-                <li class="social-media-list">
-                  <a href="https://www.instagram.com/" target="_blank">
-                    <svg class="social-media-icon">
-                      <use href="image/icon.svg#icon-Instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-media-list">
-                  <a href="https://x.com/home" target="_blank">
-                    <svg class="social-media-icon">
-                      <use href="image/icon.svg#icon-Twitter"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-media-list">
-                  <a href="https://www.facebook.com/" target="_blank">
-                    <svg class="social-media-icon">
-                      <use href="image/icon.svg#icon-Facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-media-list">
-                  <a href="https://www.linkedin.com/" target="_blank">
-                    <svg class="social-media-icon">
-                      <use href="image/icon.svg#icon-Linkedin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li class="part-three-list">
-            <img
-              class="part-three-list-img"
-              src="image/our-team/img-2.jpg"
-              alt="Tom Ford resmi"
-            />
-            <div class="part-three-list-text">
-              <p class="part-three-list-text-name">Tom Ford</p>
-              <p class="part-three-list-text-information">Frontend Developer</p>
-              <ul class="part-three-list-social-media">
-                <li class="social-media-list">
-                  <a href="https://www.instagram.com/" target="_blank">
-                    <svg class="social-media-icon">
-                      <use href="image/icon.svg#icon-Instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-media-list">
-                  <a href="https://x.com/home" target="_blank">
-                    <svg class="social-media-icon">
-                      <use href="image/icon.svg#icon-Twitter"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-media-list">
-                  <a href="https://www.facebook.com/" target="_blank">
-                    <svg class="social-media-icon">
-                      <use href="image/icon.svg#icon-Facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-media-list">
-                  <a href="https://www.linkedin.com/" target="_blank">
-                    <svg class="social-media-icon">
-                      <use href="image/icon.svg#icon-Linkedin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li class="part-three-list">
-            <img
-              class="part-three-list-img"
-              src="image/our-team/img-3.jpg"
-              alt="Camila Garcia resmi"
-            />
-            <div class="part-three-list-text">
-              <p class="part-three-list-text-name">Camila Garcia</p>
-              <p class="part-three-list-text-information">Marketing</p>
-              <ul class="part-three-list-social-media">
-                <li class="social-media-list">
-                  <a href="https://www.instagram.com/" target="_blank">
-                    <svg class="social-media-icon">
-                      <use href="image/icon.svg#icon-Instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-media-list">
-                  <a href="https://x.com/home" target="_blank">
-                    <svg class="social-media-icon">
-                      <use href="image/icon.svg#icon-Twitter"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-media-list">
-                  <a href="https://www.facebook.com/" target="_blank">
-                    <svg class="social-media-icon">
-                      <use href="image/icon.svg#icon-Facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-media-list">
-                  <a href="https://www.linkedin.com/" target="_blank">
-                    <svg class="social-media-icon">
-                      <use href="image/icon.svg#icon-Linkedin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li class="part-three-list">
-            <img
-              class="part-three-list-img"
-              src="image/our-team/img-4.jpg"
-              alt="Daniel Wilson resmi"
-            />
-            <div class="part-three-list-text">
-              <p class="part-three-list-text-name">Daniel Wilson</p>
-              <p class="part-three-list-text-information">UI Designer</p>
-              <ul class="part-three-list-social-media">
-                <li class="social-media-list">
-                  <a href="https://www.instagram.com/" target="_blank">
-                    <svg class="social-media-icon">
-                      <use href="image/icon.svg#icon-Instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-media-list">
-                  <a href="https://x.com/home" target="_blank">
-                    <svg class="social-media-icon">
-                      <use href="image/icon.svg#icon-Twitter"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-media-list">
-                  <a href="https://www.facebook.com/" target="_blank">
-                    <svg class="social-media-icon">
-                      <use href="image/icon.svg#icon-Facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-media-list">
-                  <a href="https://www.linkedin.com/" target="_blank">
-                    <svg class="social-media-icon">
-                      <use href="image/icon.svg#icon-Linkedin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </li>
-        </ul>
+          <ul class="part-three">
+            <li class="part-three-list">
+              <img
+                class="part-three-list-img"
+                src="image/our-team/img-1.jpg"
+                alt="Mark Guerrero resmi"
+              />
+              <div class="part-three-list-text">
+                <p class="part-three-list-text-name">Mark Guerrero</p>
+                <p class="part-three-list-text-information">Product Designer</p>
+                <ul class="part-three-list-social-media">
+                  <li class="social-media-list">
+                    <a href="https://www.instagram.com/" target="_blank">
+                      <svg class="social-media-icon">
+                        <use href="image/icon.svg#icon-Instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a href="https://x.com/home" target="_blank">
+                      <svg class="social-media-icon">
+                        <use href="image/icon.svg#icon-Twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a href="https://www.facebook.com/" target="_blank">
+                      <svg class="social-media-icon">
+                        <use href="image/icon.svg#icon-Facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a href="https://www.linkedin.com/" target="_blank">
+                      <svg class="social-media-icon">
+                        <use href="image/icon.svg#icon-Linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="part-three-list">
+              <img
+                class="part-three-list-img"
+                src="image/our-team/img-2.jpg"
+                alt="Tom Ford resmi"
+              />
+              <div class="part-three-list-text">
+                <p class="part-three-list-text-name">Tom Ford</p>
+                <p class="part-three-list-text-information">
+                  Frontend Developer
+                </p>
+                <ul class="part-three-list-social-media">
+                  <li class="social-media-list">
+                    <a href="https://www.instagram.com/" target="_blank">
+                      <svg class="social-media-icon">
+                        <use href="image/icon.svg#icon-Instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a href="https://x.com/home" target="_blank">
+                      <svg class="social-media-icon">
+                        <use href="image/icon.svg#icon-Twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a href="https://www.facebook.com/" target="_blank">
+                      <svg class="social-media-icon">
+                        <use href="image/icon.svg#icon-Facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a href="https://www.linkedin.com/" target="_blank">
+                      <svg class="social-media-icon">
+                        <use href="image/icon.svg#icon-Linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="part-three-list">
+              <img
+                class="part-three-list-img"
+                src="image/our-team/img-3.jpg"
+                alt="Camila Garcia resmi"
+              />
+              <div class="part-three-list-text">
+                <p class="part-three-list-text-name">Camila Garcia</p>
+                <p class="part-three-list-text-information">Marketing</p>
+                <ul class="part-three-list-social-media">
+                  <li class="social-media-list">
+                    <a href="https://www.instagram.com/" target="_blank">
+                      <svg class="social-media-icon">
+                        <use href="image/icon.svg#icon-Instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a href="https://x.com/home" target="_blank">
+                      <svg class="social-media-icon">
+                        <use href="image/icon.svg#icon-Twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a href="https://www.facebook.com/" target="_blank">
+                      <svg class="social-media-icon">
+                        <use href="image/icon.svg#icon-Facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a href="https://www.linkedin.com/" target="_blank">
+                      <svg class="social-media-icon">
+                        <use href="image/icon.svg#icon-Linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="part-three-list">
+              <img
+                class="part-three-list-img"
+                src="image/our-team/img-4.jpg"
+                alt="Daniel Wilson resmi"
+              />
+              <div class="part-three-list-text">
+                <p class="part-three-list-text-name">Daniel Wilson</p>
+                <p class="part-three-list-text-information">UI Designer</p>
+                <ul class="part-three-list-social-media">
+                  <li class="social-media-list">
+                    <a href="https://www.instagram.com/" target="_blank">
+                      <svg class="social-media-icon">
+                        <use href="image/icon.svg#icon-Instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a href="https://x.com/home" target="_blank">
+                      <svg class="social-media-icon">
+                        <use href="image/icon.svg#icon-Twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a href="https://www.facebook.com/" target="_blank">
+                      <svg class="social-media-icon">
+                        <use href="image/icon.svg#icon-Facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-list">
+                    <a href="https://www.linkedin.com/" target="_blank">
+                      <svg class="social-media-icon">
+                        <use href="image/icon.svg#icon-Linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <section id="Portfolio" class="container">
         <ul class="part-four">
