--- a/index.html
+++ b/index.html
@@ -47,11 +47,15 @@
           </div>
           <nav class="nav-menu-box">
             <ul class="nav-menu">
-              <li id="Studio" class="nav-menu-list nav-menu-list-two">
-                Studio
+              <li class="nav-menu-list nav-menu-list-two">
+                <a href="#Studio">Studio</a>
               </li>
-              <li id="Portfolio" class="nav-menu-list">Portfolio</li>
-              <li id="Contacts" class="nav-menu-list">Contacts</li>
+              <li class="nav-menu-list">
+                <a href="#Portfolio">Portfolio</a>
+              </li>
+              <li class="nav-menu-list">
+                <a href="#Contacts">Contacts</a>
+              </li>
             </ul>
           </nav>
           <address class="adres-menu-box">
