--- a/index.html
+++ b/index.html
@@ -32,6 +32,31 @@
           <a class="title-logo" href="index.html"
             >WEB<span class="title-logo-two">STUDIO</span></a
           >
+          <nav class="nav-menu-box nav-menu-box-desktop">
+            <ul class="nav-menu nav-menu-desktop">
+              <li
+                class="nav-menu-list nav-menu-list-two nav-menu-list-desktop nav-menu-list-desktop-green"
+              >
+                <a href="#Studio">Studio</a>
+              </li>
+              <li class="nav-menu-list nav-menu-list-desktop">
+                <a href="#Portfolio">Portfolio</a>
+              </li>
+              <li class="nav-menu-list nav-menu-list-desktop">
+                <a href="#Contacts">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="adres-menu-box adres-menu-box-desktop">
+            <ul class="adres-menu adres-menu-desktop">
+              <li class="adres-menu-list adres-menu-list-desktop">
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li class="adres-menu-list adres-menu-list-desktop">
+                <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
+              </li>
+            </ul>
+          </address>
           <svg id="hamburger-menu-icon" class="hamburger-menu-icon">
             <use href="image/icon.svg#icon-hamburger-menu"></use>
           </svg>
