--- a/index.html
+++ b/index.html
@@ -200,7 +200,8 @@
               <li class="part-three-list">
                 <img
                   class="part-three-list-img"
-                  src="image/our-team/img-1.jpg"
+                  srcset="image/our-team/img-1 1x.jpg 1x , image/our-team/img-1 2x.jpg 2x"
+                  src="image/our-team/img-1 2x.jpg"
                   alt="Mark Guerrero resmi"
                 />
                 <div class="part-three-list-text">
@@ -243,7 +244,8 @@
               <li class="part-three-list">
                 <img
                   class="part-three-list-img"
-                  src="image/our-team/img-2.jpg"
+                  srcset="image/our-team/img-2 1x.jpg 1x , image/our-team/img-2 2x.jpg 2x"
+                  src="image/our-team/img-2 2x.jpg"
                   alt="Tom Ford resmi"
                 />
                 <div class="part-three-list-text">
@@ -288,7 +290,8 @@
               <li class="part-three-list">
                 <img
                   class="part-three-list-img"
-                  src="image/our-team/img-3.jpg"
+                  srcset="image/our-team/img-3 1x.jpg 1x , image/our-team/img-3 2x.jpg 2x"
+                  src="image/our-team/img-3 2x.jpg"
                   alt="Camila Garcia resmi"
                 />
                 <div class="part-three-list-text">
@@ -329,7 +332,8 @@
               <li class="part-three-list">
                 <img
                   class="part-three-list-img"
-                  src="image/our-team/img-4.jpg"
+                  srcset="image/our-team/img-4 1x.jpg 1x , image/our-team/img-4 2x.jpg 2x"
+                  src="image/our-team/img-4 2x.jpg"
                   alt="Daniel Wilson resmi"
                 />
                 <div class="part-three-list-text">
@@ -380,7 +384,8 @@
                 <li class="part-four-list">
                   <div class="part-four-list-img">
                     <img
-                      src="image/our-portfolio/img-1.jpg"
+                      srcset="image/our-portfolio/img-1 1x.jpg 1x , image/our-portfolio/img-1 2x.jpg 2x"
+                      src="image/our-portfolio/img-1 2x.jpg"
                       alt="Banka Uygulaması"
                     />
                     <div class="part-four-list-hidden">
@@ -397,7 +402,8 @@
                 <li class="part-four-list">
                   <div class="part-four-list-img">
                     <img
-                      src="image/our-portfolio/img-2.jpg"
+                      srcset="image/our-portfolio/img-2 1x.jpg 1x , image/our-portfolio/img-2 2x.jpg 2x"
+                      src="image/our-portfolio/img-2 2x.jpg"
                       alt="Telefon Odeme uygulaması"
                     />
                     <div class="part-four-list-hidden">
@@ -416,7 +422,8 @@
                 <li class="part-four-list">
                   <div class="part-four-list-img">
                     <img
-                      src="image/our-portfolio/img-3.jpg"
+                      srcset="image/our-portfolio/img-3 1x.jpg 1x , image/our-portfolio/img-3 2x.jpg 2x"
+                      src="image/our-portfolio/img-3 2x.jpg"
                       alt="Meditasyon uygulaması"
                     />
                     <div class="part-four-list-hidden">
@@ -433,7 +440,8 @@
                 <li class="part-four-list">
                   <div class="part-four-list-img">
                     <img
-                      src="image/our-portfolio/img-4.jpg"
+                      srcset="image/our-portfolio/img-4 1x.jpg 1x , image/our-portfolio/img-4 2x.jpg 2x"
+                      src="image/our-portfolio/img-4 2x.jpg"
                       alt="Taksi servis uygulaması"
                     />
                     <div class="part-four-list-hidden">
@@ -452,7 +460,8 @@
                 <li class="part-four-list">
                   <div class="part-four-list-img">
                     <img
-                      src="image/our-portfolio/img-5.jpg"
+                      srcset="image/our-portfolio/img-5 1x.jpg 1x , image/our-portfolio/img-5 2x.jpg 2x"
+                      src="image/our-portfolio/img-5 2x.jpg"
                       alt="Telefon tema uygulaması"
                     />
 
@@ -470,7 +479,8 @@
                 <li class="part-four-list">
                   <div class="part-four-list-img">
                     <img
-                      src="image/our-portfolio/img-6.jpg"
+                      srcset="image/our-portfolio/img-6 1x.jpg 1x , image/our-portfolio/img-6 2x.jpg 2x"
+                      src="image/our-portfolio/img-6 2x.jpg"
                       alt="Online kurs"
                     />
                     <div class="part-four-list-hidden">
